--- a/Padaria/Content/bootstrap.css
+++ b/Padaria/Content/bootstrap.css
@@ -1,4 +1,3 @@
-/* NUGET: BEGIN LICENSE TEXT
  *
  * Microsoft grants you the right to use these script files for the sole
  * purpose of either: (i) interacting through your browser with the Microsoft
@@ -1416,6 +1415,7 @@ th {
 .table {
   width: 100%;
   margin-bottom: 20px;
+  margin-left: 281px;
 }
 
 .table thead > tr > th,
@@ -4928,11 +4928,11 @@ a.list-group-item.active > .badge,
 }
 
 .jumbotron {
-  padding: 30px;
-  margin-bottom: 30px;
-  font-size: 21px;
+  padding: 0px;
+  margin-bottom: 20px;
+  font-size: 16px;
   font-weight: 200;
-  line-height: 2.1428571435;
+  line-height: 2.6428571435;
   color: inherit;
   background-color: #eeeeee;
 }
@@ -4947,13 +4947,13 @@ a.list-group-item.active > .badge,
 }
 
 .container .jumbotron {
-  border-radius: 6px;
+  border-radius: 45px;
 }
 
 @media screen and (min-width: 768px) {
   .jumbotron {
-    padding-top: 48px;
-    padding-bottom: 48px;
+    padding-top: 15px;
+    padding-bottom: 15px;
   }
   .container .jumbotron {
     padding-right: 60px;
