--- a/Padaria/Views/Home/Index.cshtml
+++ b/Padaria/Views/Home/Index.cshtml
@@ -1,31 +1,26 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Principal";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+<br />
+<br />
+
+<div>
+    <h1 align="center"> Padaria Novo Milênio</h1>
+    <img hspace="420" src="https://rlv.zcache.com/vintage_cake_emblem_logo_bakery_ii_sticker-rd490b5d7ed1b4b238e91a3a9f108d516_v9waf_8byvr_324.jpg" width="300" height="300" />
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
+<p class="text-muted" align="center">
+    Os melhores salgados de Santo André, agora vendidos pela internet!
+</p>
+
+<br />
+<br />
+
+<div align="center">
+    <a @Html.ActionLink("Tabela de Preços", "Preco", "Home", null, new { @class = "btn btn-info" }) </a>
+    <a @Html.ActionLink("Encomendar", "Create", "pedidos", null, new { @class = "btn btn-info" }) </a>
 </div>
+
+<br />
+<br />
