--- a/Padaria/Views/Shared/_Layout.cshtml
+++ b/Padaria/Views/Shared/_Layout.cshtml
@@ -17,15 +17,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Padaria", "Index", "pedidos")</li>
+                    <li>@Html.ActionLink("Nossos Preços", "Preco", "Home")</li>
+                    <li>@Html.ActionLink("Encomendar", "Create", "pedidos")</li>
+                    <li>@Html.ActionLink("Lista de Pedidos", "Lista", "pedidos")</li>
                 </ul>
-                @Html.Partial("_LoginPartial")
             </div>
         </div>
     </div>
@@ -33,7 +32,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - General Claims</p>
         </footer>
     </div>
 
